WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238486
Regression: WebsiteDataStore fails to read experimental feature values from NSUserDefaults
https://bugs.webkit.org/show_bug.cgi?id=238486
Summary
Regression: WebsiteDataStore fails to read experimental feature values from N...
Sihui Liu
Reported
2022-03-28 21:37:37 PDT
...
Attachments
Patch
(7.18 KB, patch)
2022-03-28 21:42 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(7.11 KB, patch)
2022-03-30 15:39 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2022-03-28 21:42:49 PDT
Created
attachment 455991
[details]
Patch
Sihui Liu
Comment 2
2022-03-29 14:57:08 PDT
Ping reviewers
Alex Christensen
Comment 3
2022-03-30 10:59:53 PDT
Comment on
attachment 455991
[details]
Patch This is responding to the change in Safari, but we should be moving towards using SPI to set these values in WKWebsiteDataStoreConfiguration instead of having WebKit read from defaults.
Sihui Liu
Comment 4
2022-03-30 15:39:50 PDT
Created
attachment 456180
[details]
Patch for landing
EWS
Comment 5
2022-03-30 22:09:45 PDT
Committed
r292141
(
249048@main
): <
https://commits.webkit.org/249048@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456180
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-03-30 22:10:17 PDT
<
rdar://problem/91085159
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug