Regression: WebsiteDataStore fails to read experimental feature values from NSUserDefaults https://bugs.webkit.org/show_bug.cgi?id=238486

Reviewed by Alex Christensen.

Source/WebKit:

From rdar://46352542, Safari no longer uses "Experimental" as prefix for experimental features.

* UIProcess/WebsiteData/Cocoa/WebsiteDataStoreCocoa.mm:
(WebKit::internalFeatureEnabled):
(WebKit::experimentalFeatureEnabled):
(WebKit::WebsiteDataStore::thirdPartyCookieBlockingMode const):
(WebKit::WebsiteDataStore::platformSetNetworkParameters):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/WebsiteDataStoreCustomPaths.mm:
(TEST):



Canonical link: https://commits.webkit.org/249048@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292141 268f45cc-cd09-0410-ab3c-d52691b4dbfc